<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello"><big>Welcome to DrmReader</big>\n\nLooks like you have no epubs added, yet. Click <b>Import Epub</b> in the menu to add some from your sdcard.\n\nOr if you want to <b>download</b> an epub, click <b>Web Store</b> in the menu.</string>
    <string name="app_name">DrmReader</string>
    <string name="list_no_items">No documents to display</string>
    <string name="read_item">Read</string>
    <string name="delete_item">Delete</string>
    <string name="toc">Table Of Contents</string>
    <string name="home">Document list</string>
    <string name="font_size">Font size</string>
    <string name="night_mode">Day/Night</string>
    <string name="font_size_msg">Set the Font Size</string>
    <string name="tableOfContents">Table Of Contents</string>
    <string name="refresh">refresh</string>
    <string name="importEpub">import epub</string>
    <string name="up_one_level">..</string>
    <string name="current_dir">.</string>
    <string name="cancel">cancel</string>
    <string name="search_hint">Search epubs</string>
	<string name="search_title">Results:</string>
	<string name="search_description">Epubs</string>
	<string name="no_results">Could not find any results. Try complete words.</string>
    <string name="sort">Sort by</string>
    <string name="webStore">Web store</string>
    <string name="import_inbackground">Importing...</string>
    <string name="import_inprogress">There is an import in progress. Wait for it to complete, then try again.</string>
    <string name="import_success">file(s) imported successfully</string>
    <string name="import_error_title">Import error</string>
    <string name="import_error_msg">Some error happened during the import process.Please try again.</string>
    <string name="import_file_error_title">Import file error</string>
    <string name="import_file_error_msg">File not found</string>
    <string name="import_invalid_key_title">Import key error</string>
    <string name="import_invalid_key_msg">Invalid decryption key.It belongs to another device.</string>
    <string name="browser_empty">empty</string>
    <string name="browser_action_import">import files</string>
    <string name="browser_action_clear">unselect all</string>
    <string name="offline">There is no active connection to the internet reported. Please make sure you are connected to the internet and try again.</string>
    <string name="offline_title">No connection</string>
    <string name="weblist_error">Could not fetch the document list</string>
    <string name="weblist_error_title">Error</string>
    <string name="weblist_error_msg">Something went wrong during the data parsing.Please try again by pressing the update button</string>
    
    <!--  Sorting -->
    <string-array name="epub_sortingData">
		<item>alphabetic asc</item>
		<item>alphabetic desc</item>
		<item>author asc</item>
		<item>author desc</item>
	</string-array>
    <string name="sorting_title">Sort by</string>
    <string-array name="epub_sorting">
		<item>A - Z</item>
		<item>Z - A</item>
		<item>by Author ASC</item>
		<item>by Author DESC</item>
	</string-array>
</resources>
